--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,5 +12,6 @@
         
         "valentjn.vscode-ltex",
         "hediet.vscode-drawio",
+        "shd101wyy.markdown-preview-enhanced"
     ]
 }
